--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
   
   .heroimage {
     background-image: url("images/hero-image.jpg");
-    opacity: 0.7;
+    z-index: -1;
+    /* opacity: 0.7; */
   /*   background-repeat: no-repeat; */
     background-size: cover;
     height: 600px;
@@ -177,5 +178,5 @@
   }
 
   .hero-text {
-      background-color: white;
+      /* background-color: white; */
   }
